// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Disabled FilterInput 1`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 bg-gray-100 text-gray-400 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          disabled=""
          id="query"
          name="query"
          placeholder="*"
          value=""
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Disabled FilterInput 2`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 bg-gray-100 text-gray-400 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          disabled=""
          id="query"
          name="query"
          placeholder="*"
          value=""
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Disabled FilterInput 3`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 bg-gray-100 text-gray-400 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          disabled=""
          id="query"
          name="query"
          placeholder="*"
          value=""
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
          disabled=""
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 3c2.755 0 5.455.232 8.083.678.533.09.917.556.917 1.096v1.044a2.25 2.25 0 0 1-.659 1.591l-5.432 5.432a2.25 2.25 0 0 0-.659 1.591v2.927a2.25 2.25 0 0 1-1.244 2.013L9.75 21v-6.568a2.25 2.25 0 0 0-.659-1.591L3.659 7.409A2.25 2.25 0 0 1 3 5.818V4.774c0-.54.384-1.006.917-1.096A48.32 48.32 0 0 1 12 3Z"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Enabled FilterInput 1`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          id="query"
          name="query"
          placeholder="*"
          value="Hello, world!"
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Enabled FilterInput 2`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          id="query"
          name="query"
          placeholder="*"
          value="Hello, world!"
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;

exports[`Enabled FilterInput 3`] = `
<body>
  <div>
    <div>
      <div
        class="mt-2 relative rounded-md"
      >
        <input
          class="block w-full rounded-md border-0 py-1.5 pl-3 text-gray-900 ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-blue-500 sm:text-sm sm:leading-6"
          id="query"
          name="query"
          placeholder="*"
          value="Hello, world!"
        />
        <button
          class="absolute inset-y-0 right-0 flex items-center pr-3"
        >
          <svg
            aria-hidden="true"
            class="h-5 w-5 text-gray-400"
            data-slot="icon"
            fill="none"
            stroke="currentColor"
            stroke-width="1.5"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18 18 6M6 6l12 12"
              stroke-linecap="round"
              stroke-linejoin="round"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</body>
`;
